crates/shipper-cli/tests/snapshots/e2e_expanded__clean_keep_receipt_no_receipt.snap
---
source: crates/shipper-cli/tests/e2e_expanded.rs
expression: normalize_output(&stdout)
---
Removed: <DIR>/state.json
Clean complete
