crates/shipper-cli/tests/snapshots/e2e_expanded__clean_no_state_dir.snap
---
source: crates/shipper-cli/tests/e2e_expanded.rs
expression: normalize_output(&stdout)
---
State directory does not exist: <STATE_DIR>
