crates/shipper-cli/tests/snapshots/e2e_expanded__clean_only_receipt_exists.snap
---
source: crates/shipper-cli/tests/e2e_expanded.rs
expression: normalize_output(&stdout)
---
Removed: <DIR>/receipt.json
Clean complete
