crates/shipper-cli/tests/snapshots/e2e_expanded__config_init_custom_filename.snap
---
source: crates/shipper-cli/tests/e2e_expanded.rs
expression: normalized
---
Created configuration file: <CONFIG_PATH>

Edit the file to customize shipper settings for your workspace.
Run `shipper config validate` to check the configuration.
